# pippopp

./: .gitignore  Cargo.toml  README.md  build-run-debug.sh  build-run.sh  build.sh  flake.nix  linker.ld  todo.md
.cargo/: config.toml
lib/: lib.rs  macros.rs
lib/arch/riscv/: csr.rs  kernel.rs  mod.rs  timer.rs  trap.rs
lib/arch/riscv/dispatch/: riscv32im.rs
lib/arch/riscv/environment/: riscv32im.rs
lib/arch/riscv/frame/: mod.rs  riscv32im.rs
lib/arch/riscv/page_table/: mod.rs  satp_sv32.rs
lib/arch/riscv/sbi/: base.rs  debug_console.rs  harth.rs  mod.rs  timer.rs
lib/collections/: mod.rs  mutex.rs  ring_buffer.rs
lib/drivers/virtio/: mod.rs
lib/kernel/: mod.rs
lib/kernel/environment/: dispatch.rs  frame.rs  mod.rs  page_table.rs
lib/kernel/mem/: kernel_allocator.rs  mod.rs  page_allocator.rs  pages.rs
lib/kernel/process/: memory.rs  mod.rs  process.rs
lib/kernel/scheduler/: mod.rs  stack.rs  task.rs
lib/kernel/trap/: mod.rs
lib/kernel/trap/syscall/: mod.rs
lib/utils/: align_up.rs  is_aligned.rs  mod.rs
src/: main.rs
src/arch/riscv/: boot.S  mod.rs  riscv32imac.rs
