[package]
name = "pippopp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pippopp"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
name = "pippopp"
path = "lib/lib.rs"
test = false
doctest = false
bench = false

[dependencies]
bitflags = "1.3.2"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
lto = true
